log
Thu 25 Apr 2024 01:57:38 AM UTC: 
 hashmap.c | 78 +++++++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 54 insertions(+), 24 deletions(-)
 tests:  5|4
total_score: 30/70
295cb14
Thu 25 Apr 2024 02:09:33 AM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  5|4
total_score: 30/70
819e5de
Thu 25 Apr 2024 02:12:07 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
dcbd7bb
Thu 25 Apr 2024 02:12:59 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 30/70
58b642f
Thu 25 Apr 2024 02:15:32 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:84:31: error: suggest parentheses around ‘&&’ within ‘||’ [-Werror=parentheses]
   84 |   while (map->buckets != NULL && map->buckets[pos]->key == NULL ||
      |                               ^
cc1: all warnings being treated as errors
Compilation failed
137adaf
Thu 25 Apr 2024 02:16:08 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
fded479
Thu 25 Apr 2024 02:18:49 AM UTC: 
 hashmap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  5|4
total_score: 30/70
b2cb373
Thu 25 Apr 2024 02:19:13 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
397ab31
Thu 25 Apr 2024 02:20:01 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
0a19daa
Thu 25 Apr 2024 02:29:05 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:8: error: unused variable ‘aux’ [-Werror=unused-variable]
   98 |   long aux;
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
d7b1d27
Thu 25 Apr 2024 02:29:17 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
00c7440
Thu 25 Apr 2024 02:39:03 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
ba3f60f
Thu 25 Apr 2024 02:44:57 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
b7e6922
Thu 25 Apr 2024 02:49:10 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  13|2
total_score: 50/70
1ab7d63
Thu 25 Apr 2024 02:50:24 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
077722d
Thu 25 Apr 2024 02:51:13 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
2ef868f
Thu 25 Apr 2024 02:57:29 AM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
b767981
Thu 25 Apr 2024 02:58:21 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
89554f9
Thu 25 Apr 2024 02:59:02 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:70:53: error: ‘Pair’ has no member named ‘keu’; did you mean ‘key’?
   70 |     if (map->buckets[i] != NULL && map->buckets[i]->keu != NULL)
      |                                                     ^~~
      |                                                     key
Compilation failed
12141f8
Thu 25 Apr 2024 02:59:12 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9238003
Thu 25 Apr 2024 02:59:30 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9d6a12d
Thu 25 Apr 2024 03:11:22 AM UTC: 
 hashmap.c | 21 +++++++++++----------
 1 file changed, 11 insertions(+), 10 deletions(-)
 tests:  0|0
3741cc8
Thu 25 Apr 2024 03:13:56 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
d942baa
